# Cloudcollection

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Yun_project.code-workspace  build.ninja  cmake_install.cmake  stm32f405rgtx_FLASH.ld
Drivers/FWlib/F1dsplib/: stm32_dsp.h
Drivers/wPeri/Inc/: wAdc.h  wDac.h  wDelay.h  wIO.h  wNVIC.h  wTim.h  wUsart.h
Drivers/wPeri/Src/: wAdc.c  wDac.c  wDelay.c  wIO.c  wNVIC.c  wTim.c  wUsart.c
Inc/: globals.h  includes.h  stm32f4xx.h  stm32f4xx_conf.h  tickTask.h
Src/: main.c  stm32f4xx_it.c  system_stm32f4xx.c  tickTask.c
Startup/: startup_stm32f405rgtx.s
cmake/: vscode_generated.cmake
